[gd_scene load_steps=13 format=3 uid="uid://c4iogrtlucwi3"]

[ext_resource type="Script" path="res://addons/gkanban/pages/StartPage.gd" id="1"]
[ext_resource type="FontFile" path="res://addons/gkanban/text_resources/font_title.tres" id="2_l1rtw"]
[ext_resource type="FontFile" path="res://addons/gkanban/text_resources/font_regular.tres" id="3_1qtbl"]
[ext_resource type="FontFile" path="res://addons/gkanban/text_resources/font_header1.tres" id="4_331ak"]
[ext_resource type="StyleBox" path="res://addons/gkanban/text_resources/btn_outline_primary.tres" id="5_2cu3e"]
[ext_resource type="StyleBox" path="res://addons/gkanban/text_resources/btn_project_board_hover.tres" id="6_x53jg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnvrs"]
bg_color = Color(0.219608, 0.247059, 0.317647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xy42s"]
font = ExtResource("2_l1rtw")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_d0wmi"]
font = ExtResource("3_1qtbl")

[sub_resource type="LabelSettings" id="LabelSettings_pd2na"]
font = ExtResource("4_331ak")
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7t7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xixlt"]

[node name="StartPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1")
project_board_container_path = NodePath("BG/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/ProjectBoardListContainer")

[node name="BG" type="PanelContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mnvrs")

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="BG/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="BG/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="AppTitleLabel" type="Label" parent="BG/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "G-Kanban"
label_settings = SubResource("LabelSettings_xy42s")
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="BG/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Version 0.1.0g4
"
label_settings = SubResource("LabelSettings_d0wmi")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BG/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="BG/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2

[node name="ProjectBoardsLabel" type="Label" parent="BG/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "PROJECT BOARDS"
label_settings = SubResource("LabelSettings_pd2na")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="BG/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="BG/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BG/VBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 16

[node name="ProjectBoardListContainer" type="VBoxContainer" parent="BG/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="AddProjectBoardBtn" type="Button" parent="BG/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.643137, 0.721569, 0.768627, 1)
theme_override_colors/font_pressed_color = Color(0.219608, 0.247059, 0.317647, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.247059, 0.317647, 1)
theme_override_fonts/font = ExtResource("3_1qtbl")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("5_2cu3e")
theme_override_styles/hover = ExtResource("6_x53jg")
theme_override_styles/pressed = ExtResource("6_x53jg")
text = "Add A Project Board"

[node name="MarginContainer2" type="MarginContainer" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="AuthorFooterLabel" type="RichTextLabel" parent="BG/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_1qtbl")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7t7n")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xixlt")
bbcode_enabled = true
text = "[center]original by Leon Oscar Kidando | [url=https://github.com/kidando/gkanban]Github[/url] | ported by H4x0r_000 | [url=https://github.com/H4x0r-000/gkanban]Github[/url][/center]"

[node name="ModalContainer" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="pressed" from="BG/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/AddProjectBoardBtn" to="." method="_on_AddProjectBoardBtn_pressed"]
[connection signal="meta_clicked" from="BG/VBoxContainer/MarginContainer2/AuthorFooterLabel" to="." method="_on_AuthorFooterLabel_meta_clicked"]
